# Differential_equations_project

./: .gitignore  README.md
code/: CMakeLists.txt  main.cpp  result.csv  visualizer.py
code/cached/: 10000  100000
code/include/: equation_logic.hpp  gaussian_quadrature.hpp  legendre_polynomial.hpp  linear_solution.hpp  matrix.hpp
code/src/: equation_logic.cpp  legendre_polynomial.cpp  linear_solution.cpp  matrix.cpp
scripts/: run.bat  run.sh
